workshop03/mydb-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: mydb-svc
spec: 
  selector:
    app: mydb
  type: ClusterIP
  ports:
  - name: dbport
    port: 3306
    targetPort: 3306
