workshop03/myapp-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
   name: myapp-ing
   annotations:
     kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/rewrite-target: "/"
     nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: app-service-v1
              servicePort: 80
    - host: "appv1.157.230.195.199.nip.io"
      http:
        paths:
          - backend:
              serviceName: app-service-v1
              servicePort: 80
    - host: "appv2.157.230.195.199.nip.io"
      http:
        paths:
          - backend:
              serviceName: app-service-v2
              servicePort: 80
